tests/journey/snapshots/journey__cli__hold_with_active_activity_snapshot_passes.snap
---
source: tests/journey/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmpXuhKFY\\activities.pace.toml"
    - hold
---
success: true
exit_code: 0
----- stdout -----
Held 📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+00:00

----- stderr -----
