tests/journey/snapshots/journey__cli__now_no_activities_snapshot_passes.snap
---
source: tests/journey/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmpOOtqVl\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
No activities are currently running.

----- stderr -----
