tests/journey/snapshots/journey__cli__now_with_active_activity_snapshot_passes.snap
---
source: tests/journey/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmp3ZXwGR\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+00:00

----- stderr -----
