tests/journey/snapshots/journey__cli__reflect_current_month_snapshot_passes.snap
---
source: tests/journey/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log"
    - "./tests/fixtures/activity_tracker/activities.pace.toml"
    - reflect
    - current-month
---
success: true
exit_code: 0
----- stdout -----
No activities found for the specified time frame

----- stderr -----
